<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootview">
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">
        <TextView
            style="@style/title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"/>

        <ImageView
            style="@style/img_style"
            android:src="@mipmap/sysu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            style="@style/text_below_photo"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            >
            <EditText
                style="@style/edit_below_photo"
                android:inputType="text"
                android:hint="@string/user_input"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass"
            style="@style/text_below_photo"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="right" >
            <EditText
                style="@style/edit_below_photo"
                android:inputType="textPassword"
                android:hint="@string/pass_input"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup style="@style/radio_group" android:id="@+id/id0">
            <RadioButton
                android:id="@+id/id1"
                style="@style/radio_button"
                android:layout_marginRight="10dp"
                android:text="@string/student"
                android:checked="true"
                android:singleLine="false"
                android:allowUndo="false" />
            <RadioButton
                android:id="@+id/id2"
                style="@style/radio_button"
                android:layout_marginRight="@dimen/tend"
                android:text="@string/teacher"/>
            <RadioButton
                android:id="@+id/id3"
                style="@style/radio_button"
                android:layout_marginRight="@dimen/tend"
                android:text="@string/team"/>
            <RadioButton
                android:id="@+id/id4"
                style="@style/radio_button"
                android:text="@string/manager"/>

        </RadioGroup>

        <LinearLayout style="@style/linear_log">
            <Button
                android:id="@+id/login"
                style="@style/reg_log"
                android:text="@string/login"
                android:layout_marginRight="@dimen/fifteen"/>

            <Button
                android:id="@+id/reg"
                style="@style/reg_log"
                android:text="@string/register"/>
        </LinearLayout>
</LinearLayout>
</LinearLayout>